--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
     <h1>Добро пожаловать на мой сайт!</h1>
     <p>Это главная страница.</p>
-    <a href="Actors.html">Страница 1</a>
-    <a href="Practic11.html">Страница 2</a>
+    <a href="root/Actors.html">Страница 1</a>
+    <a href="root/Practic11.html">Страница 2</a>
 </body>
 </html>
+
